# eyes.sdk.javascript1

./: .gitignore  README.md  browser-ext.md  link.sh  migrate.sh  pending-changes.yaml  region-in-shadow-notes.md  run-command-in-every-package
.github/: dependabot.yml
.github/actions/dependencies/: action.yml  main.js  package.json
.github/actions/parser/: action.yml  index.js  main.js  package-lock.json  package.json
.github/actions/publish/: action.yml
.github/actions/release/: action.yml
.github/actions/run/: action.yml  index.js  main.js  package-lock.json  package.json  post.js
.github/actions/setup-matrix/: action.yml  index.js  package-lock.json  package.json
.github/actions/tests/: action.yml
.github/actions/version/: action.yml
.github/workflows/: .temp-slack.yml  appium.yml  changelog.yml  issue_response.yml  manual.yml  pre-commit.yml  publish-api.yml  publish-browser-extension.yml  publish-core-base.yml  publish-core-legacy.yml  publish-core.yml  publish-cypress.yml  publish-driver.yml  publish-eg-client.yml  publish-image.yml  publish-images.yml  publish-logger.yml  publish-new.yml  publish-nightwatch.yml  publish-nml-client.yml  publish-playwright.yml  publish-protractor.yml  publish-puppeteer.yml  publish-req.yml  publish-screenshoter.yml  publish-selenium.yml  publish-snippets.yml  publish-spec-playwright.yml  publish-spec-puppeteer.yml  publish-spec-selenium.yml  publish-spec-webdriverio.yml  publish-storybook.yml  publish-test-server.yml  publish-test-utils.yml  publish-testcafe.yml  publish-types.yml  publish-ufg-client.yml  publish-universal.yml  publish-utils.yml  publish-vgc.yml  (+18 more)
js/: .gitignore  README.md
python/: Makefile  requirements-test.txt
python/ci_scripts/: send_mail.sh
python/coverage-tests/: package-lock.json  package.json
python/coverage-tests/configuration/: index.js
python/coverage-tests/test/: conftest.py  sauce.py
python/docs/eyes_robotframework/: keywords.html
python/eyes_images/: CHANGELOG.md  setup.cfg
python/eyes_images/applitools/common/: config.py  test_results.py  validators.py
python/eyes_images/applitools/core/: extract_text.py
python/eyes_images/applitools/images/: eyes.py
python/eyes_images/applitools/selenium/: eyes.py  schema.py  schema_fields.py
python/eyes_robotframework/: CHANGELOG.md  README.rst  setup.cfg
python/eyes_robotframework/src/EyesLibrary/: PropagateEyesTestResults.py  __init__.py  applitools.yaml  base.py  config.py  config_parser.py  keywords_list.py  library_listener.py  robot_patcher.py  test_results_manager.py  utils.py
python/eyes_selenium/: .bumpversion.cfg  CHANGELOG.md  README.rst  setup.cfg
python/eyes_selenium/applitools/common/: config.py  match.py  test_results.py
python/eyes_selenium/applitools/common/selenium/: config.py
python/eyes_selenium/applitools/common/ultrafastgrid/: config.py
python/eyes_selenium/applitools/core/: batch_close.py  extract_text.py
python/eyes_selenium/applitools/core/fluent/: check_settings.py
python/eyes_selenium/applitools/images/: fluent.py
python/eyes_selenium/applitools/selenium/: command_executor.py  eyes.py  runner.py  schema.py  schema_fields.py  universal_sdk_types.py
python/eyes_selenium/applitools/selenium/fluent/: selenium_check_settings.py
python/eyes_universal/: README.rst  setup.cfg  setup.py
python/eyes_universal/applitools/eyes_universal/: __init__.py  server.py
python/tests/: conftest.py  test_installation.py
python/tests/functional/: conftest.py  pytest_reporting.py
python/tests/unit/: test_cyclic_imports.py
python/tutorials/: report.sh
(+47 files in other folders)
