[bdist_wheel]
universal = True

[metadata]
name = eyes-selenium
version = 5.13.0
description = Applitools Python SDK. Selenium package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
license = Applitools SDK License
license_files = LICENSE
platforms = Linux, MacOS, Windows
keywords = applitools, eyes, eyes_selenium
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_selenium

[options]
install_requires =
	Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
	Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
	Appium-Python-Client<3          ;python_version>='3.7'
	selenium<5
	eyes-images==5.13.0
python_requires = >=2.7, <4
