[bumpversion]
current_version = 2.15.0
commit = True
tag = False
message = Bump eyes_universal version: {current_version} → {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<post>\d+))?
serialize = 
	{major}.{minor}.{patch}.{post}
	{major}.{minor}.{patch}

[bumpversion:file:applitools/eyes_universal/__init__.py]

[bdist_wheel]
universal = True

[metadata]
name = eyes-universal
description = Applitools Eyes Universal SDK Server
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
project_urls = 
	Source=https://github.com/applitools/eyes.sdk.javascript1/tree/master/packages/eyes-universal
version = attr: applitools.eyes_universal.__version__
long_description = file: README.rst
license = Applitools SDK License
license_files = LICENSE
platforms = Linux, MacOS, Windows
classifiers = 
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=2.7, <4
zip_safe = False
